# plants-api

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  nightwatch.conf.js  pyproject.toml
.github/workflows/: pytest.yml
alembic/: README.md  env.py  script.py.mako
alembic/versions/: plant_create_9ae993b4d12b.py
local_dev/: Dockerfile  README.md  alembic.ini  compose.yml
plants_api/: database.py  main.py  model_base.py  router.py  tags.py  utils.py
plants_api/plants/: models.py
tests/: factories.py  plants_api_test.py  test_plants_api.py
