[tool.poetry]
name = "plants-api"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Liz Dahlstrom"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2" # application framework
sqlmodel = "^0.0.14" # model database tables as classes
pg8000 = "^1.30.5" # postgres connector

[tool.poetry.group.dev.dependencies]
httpx = "^0.26.0" # async db ttoolkit
mypy = "^1.8.0"   # type checker
black = "^24.1.1" # linter
pytest = "^8.0.0" # testing framework
uvicorn = "^0.27.0" # application engine
alembic = "^1.13.1" # database migrations
factory-boy = "^3.3.0"
mock-alchemy = "^0.2.6"
mock = "^5.1.0"
autoflake = "^2.3.1"

[tool.autoflake]
check = true
remove-all-unused-imports = true
remove-unused-variables = true
remove-duplicate-keys = true
ignore-init-module-imports = true
ignore-pass-statements = true
recursive = true
exclude = ["alembic/env"]
in-place = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

